index.css
.frame1-container {
  width: 100%;
  display: flex;
  overflow: auto;
  min-height: 100vh;
  align-items: center;
  flex-direction: column;
}
.frame1-frame1 {
  gap: 9px;
  width: 100%;
  height: auto;
  display: flex;
  padding: 47px 0;
  position: relative;
  align-items: center;
  flex-shrink: 0;
  flex-direction: column;
  background-color: rgba(255, 255, 255, 1);
}
.frame1-text10 {
  top: 46px;
  left: 9px;
  color: rgba(0, 0, 0, 1);
  height: auto;
  position: absolute;
  font-size: 20px;
  align-self: center;
  font-style: SemiBold;
  text-align: left;
  font-family: Roboto;
  font-weight: 600;
  line-height: 19px;
  font-stretch: normal;
  text-decoration: none;
}
.frame1-rectangle4 {
  left: 0px;
  width: 413px;
  bottom: -746px;
  height: 53px;
  z-index: 2;
  position: absolute;
}
.frame1-ticket {
  top: 148px;
  left: 16px;
  width: 379px;
  height: 438px;
  z-index: 3;
  position: absolute;
  border-radius: 18px;
}
.frame1-text12 {
  left: 16px;
  color: rgba(255, 255, 255, 1);
  width: 379px;
  bottom: -16px;
  height: auto;
  z-index: 4;
  position: absolute;
  font-size: 18px;
  font-style: SemiBold;
  text-align: center;
  font-family: Roboto;
  font-weight: 600;
  line-height: 19px;
  font-stretch: normal;
  text-decoration: none;
}
.frame1-text14 {
  left: 17px;
  color: rgba(255, 255, 255, 1);
  width: 379px;
  bottom: -41px;
  height: auto;
  z-index: 5;
  position: absolute;
  font-size: 18px;
  font-style: Regular;
  text-align: center;
  font-family: Roboto;
  font-weight: 400;
  line-height: 19px;
  font-stretch: normal;
  text-decoration: none;
}
.frame1-text16 {
  top: 302px;
  left: 16px;
  color: rgba(0, 0, 0, 1);
  width: 379px;
  height: auto;
  z-index: 6;
  position: absolute;
  font-size: 13px;
  font-style: Regular;
  text-align: center;
  font-family: Roboto;
  font-weight: 400;
  line-height: 18px;
  font-stretch: normal;
  text-decoration: none;
}
.frame1-text20 {
  left: 92px;
  color: rgb(255, 255, 255);
  width: 77px;
  bottom: -307px;
  height: auto;
  z-index: 7;
  position: absolute;
  font-size: 15px;
  font-style: Regular;
  text-align: center;
  font-family: Roboto;
  font-weight: 400;
  line-height: normal;
  font-stretch: normal;
  text-decoration: none;
}
.frame1-text21 {
  font-size: 13px;
  font-weight: 400;
}
.frame1-text23 {
  font-size: 16px;
  font-style: normal;
  font-weight: 900;
}
.frame1-text24 {
  left: 168px;
  color: rgb(255, 255, 255);
  width: 77px;
  bottom: -307px;
  height: auto;
  z-index: 8;
  position: absolute;
  font-size: 15px;
  font-style: Regular;
  text-align: center;
  font-family: Roboto;
  font-weight: 400;
  line-height: normal;
  font-stretch: normal;
  text-decoration: none;
}
.frame1-text25 {
  font-size: 13px;
  font-weight: 400;
}
.frame1-text26 {
  font-size: 13px;
}
.frame1-text27 {
  font-size: 16px;
  font-style: normal;
  font-weight: 900;
}
.frame1-text28 {
  left: 245px;
  color: rgb(255, 255, 255);
  width: 77px;
  bottom: -307px;
  height: auto;
  z-index: 9;
  position: absolute;
  font-size: 15px;
  font-style: Regular;
  text-align: center;
  font-family: Roboto;
  font-weight: 400;
  line-height: normal;
  font-stretch: normal;
  text-decoration: none;
}
.frame1-text29 {
  font-size: 13px;
  font-weight: 400;
}
.frame1-text30 {
  font-size: 13px;
}
.frame1-text31 {
  font-size: 16px;
  font-style: normal;
  font-weight: 900;
}
.frame1-text32 {
  left: 35px;
  color: rgb(255, 255, 255);
  width: 345px;
  bottom: -397px;
  height: auto;
  z-index: 10;
  position: absolute;
  font-size: 15px;
  font-style: Regular;
  text-align: left;
  font-family: Roboto;
  font-weight: 400;
  line-height: 28px;
  font-stretch: normal;
  text-decoration: none;
}
.frame1-text33 {
  font-size: 13px;
  font-weight: 400;
}
.frame1-text34 {
  font-size: 13px;
}
.frame1-text35 {
  font-style: normal;
  font-weight: 700;
}
.frame1bg {
  top: 75px;
  left: -1px;
  width: 413px;
  height: 708px;
  z-index: 1;
  position: absolute;
}
.frame1-text36 {
  left: 33px;
  color: rgb(255, 255, 255);
  width: 345px;
  bottom: -468px;
  height: auto;
  z-index: 11;
  position: absolute;
  font-size: 14px;
  font-style: Bold;
  text-align: center;
  font-family: "Roboto";
  font-weight: 700;
  line-height: 28px;
  font-stretch: normal;
  text-decoration: none;
}
.frame1-text37 {
  top: 584px;
  left: 34px;
  color: rgba(255, 255, 255, 1);
  width: 345px;
  height: auto;
  z-index: 12;
  position: absolute;
  font-size: 15px;
  font-style: Regular;
  text-align: center;
  font-family: Roboto;
  font-weight: 400;
  line-height: 28px;
  font-stretch: normal;
  text-decoration: none;
}
.frame1-line1 {
  top: 418px;
  left: 31px;
  width: 350px;
  height: 1px;
  z-index: 13;
  position: absolute;
}
.frame1-line2 {
  top: 525px;
  left: 31px;
  width: 350px;
  height: 1px;
  z-index: 14;
  position: absolute;
}
.frame1-rectangle2 {
  left: 26px;
  width: 359px;
  bottom: -206px;
  height: 135px;
  z-index: 15;
  position: absolute;
  object-fit: cover;
}

